--- a/website/index.html
+++ b/website/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -1014,6 +1014,7 @@
             margin: -1rem -1.5rem;
             padding: 1rem 1.5rem;
             overflow-x: auto;
+            min-width: 0;
 
             > div {
               flex: 0;
@@ -1284,11 +1285,10 @@
       }
     </style>
 
-    <!-- Theme script -->
+    <!-- Scripts -->
 
     <script>
       // @ts-check
-      // Keep in sync with js files
 
       /**
        * @import { SettingsTheme } from "./types/self"
@@ -1298,7 +1298,7 @@
         localStorage.getItem(settingsThemeLocalStorageKey)
       );
       const preferredColorSchemeMatchMedia = window.matchMedia(
-        "(prefers-color-scheme: dark)"
+        "(prefers-color-scheme: dark)",
       );
       if (
         theme === "dark" ||
@@ -1310,7 +1310,7 @@
       }
 
       const backgroundColor = getComputedStyle(
-        window.document.documentElement
+        window.document.documentElement,
       ).getPropertyValue("--background-color");
       const meta = window.document.createElement("meta");
       meta.name = "theme-color";
@@ -1332,181 +1332,181 @@
       rel="icon"
       type="image/png"
       sizes="196x196"
-      href="/assets/pwa/2024-09-16_10:57:54/favicon-196.png"
+      href="/assets/pwa/2024-09-17_09-06-03/favicon-196.png"
     />
     <link
       rel="apple-touch-icon"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-icon-180.png"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-icon-180.png"
     />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-2048-2732.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-2048-2732.jpg"
       media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-2732-2048.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-2732-2048.jpg"
       media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-1668-2388.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-1668-2388.jpg"
       media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-2388-1668.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-2388-1668.jpg"
       media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-1536-2048.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-1536-2048.jpg"
       media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-2048-1536.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-2048-1536.jpg"
       media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-1488-2266.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-1488-2266.jpg"
       media="(device-width: 744px) and (device-height: 1133px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-2266-1488.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-2266-1488.jpg"
       media="(device-width: 744px) and (device-height: 1133px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-1640-2360.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-1640-2360.jpg"
       media="(device-width: 820px) and (device-height: 1180px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-2360-1640.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-2360-1640.jpg"
       media="(device-width: 820px) and (device-height: 1180px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-1668-2224.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-1668-2224.jpg"
       media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-2224-1668.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-2224-1668.jpg"
       media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-1620-2160.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-1620-2160.jpg"
       media="(device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-2160-1620.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-2160-1620.jpg"
       media="(device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-1290-2796.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-1290-2796.jpg"
       media="(device-width: 430px) and (device-height: 932px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-2796-1290.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-2796-1290.jpg"
       media="(device-width: 430px) and (device-height: 932px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-1179-2556.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-1179-2556.jpg"
       media="(device-width: 393px) and (device-height: 852px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-2556-1179.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-2556-1179.jpg"
       media="(device-width: 393px) and (device-height: 852px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-1284-2778.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-1284-2778.jpg"
       media="(device-width: 428px) and (device-height: 926px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-2778-1284.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-2778-1284.jpg"
       media="(device-width: 428px) and (device-height: 926px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-1170-2532.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-1170-2532.jpg"
       media="(device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-2532-1170.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-2532-1170.jpg"
       media="(device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-1125-2436.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-1125-2436.jpg"
       media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-2436-1125.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-2436-1125.jpg"
       media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-1242-2688.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-1242-2688.jpg"
       media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-2688-1242.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-2688-1242.jpg"
       media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-828-1792.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-828-1792.jpg"
       media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-1792-828.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-1792-828.jpg"
       media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-1242-2208.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-1242-2208.jpg"
       media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-2208-1242.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-2208-1242.jpg"
       media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-750-1334.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-750-1334.jpg"
       media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-1334-750.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-1334-750.jpg"
       media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-640-1136.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-640-1136.jpg"
       media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="/assets/pwa/2024-09-16_10:57:54/apple-splash-1136-640.jpg"
+      href="/assets/pwa/2024-09-17_09-06-03/apple-splash-1136-640.jpg"
       media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
     />
   </head>
