--- a/website/index.html
+++ b/website/index.html
@@ -1704,7 +1704,7 @@
       <a
         id="anchor-geyser"
         title="Geyser"
-        href="https://geyser.fund/project/satonomics/"
+        href="https://geyser.fund/project/kibo/"
         target="_blank"
         rel="noopener noreferrer"
       >
