--- a/website/index.html
+++ b/website/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -1308,7 +1308,7 @@
         localStorage.getItem(settingsThemeLocalStorageKey)
       );
       const preferredColorSchemeMatchMedia = window.matchMedia(
-        "(prefers-color-scheme: dark)",
+        "(prefers-color-scheme: dark)"
       );
       if (
         theme === "dark" ||
@@ -1320,7 +1320,7 @@
       }
 
       const backgroundColor = getComputedStyle(
-        window.document.documentElement,
+        window.document.documentElement
       ).getPropertyValue("--background-color");
       const meta = window.document.createElement("meta");
       meta.name = "theme-color";
@@ -1676,7 +1676,7 @@
       <a
         id="anchor-git"
         title="Git"
-        href="https://github.com/kibo-money"
+        href="https://github.com/kibo-money/kibo"
         target="_blank"
         rel="noopener noreferrer"
       >
@@ -2015,7 +2015,7 @@
               rel="noopener noreferrer"
               target="_blank"
             >
-              0.4.0
+              0.4.1
             </a>
           </p>
         </footer>
