--- a/website/index.html
+++ b/website/index.html
@@ -509,6 +509,7 @@
         color: var(--color);
         scrollbar-color: var(--off-color) var(--background-color); /* Foreground, Background */
         scrollbar-width: thin;
+        overflow: hidden;
       }
 
       input {
