--- a/website/index.html
+++ b/website/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -1038,8 +1038,8 @@
             border-top: 0;
             padding: 0.25rem 0;
             margin: -0.5px;
-            font-size: var(--font-size-xs);
-            line-height: var(--line-height-xs);
+            /* font-size: var(--font-size-xs);
+            line-height: var(--line-height-xs); */
 
             caption {
               border-bottom-style: dashed !important;
@@ -1386,7 +1386,7 @@
         localStorage.getItem(settingsThemeLocalStorageKey)
       );
       const preferredColorSchemeMatchMedia = window.matchMedia(
-        "(prefers-color-scheme: dark)"
+        "(prefers-color-scheme: dark)",
       );
       if (
         theme === "dark" ||
@@ -1398,7 +1398,7 @@
       }
 
       const backgroundColor = getComputedStyle(
-        window.document.documentElement
+        window.document.documentElement,
       ).getPropertyValue("--background-color");
       const meta = window.document.createElement("meta");
       meta.name = "theme-color";
@@ -2093,7 +2093,7 @@
               rel="noopener noreferrer"
               target="_blank"
             >
-              0.4.1
+              0.5.0
             </a>
           </p>
         </footer>
