--- a/website/index.html
+++ b/website/index.html
@@ -15,11 +15,12 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <script type="module" crossorigin src="./script.js"></script>
 
+    <!-- ------ -->
     <!-- Styles -->
+    <!-- ------ -->
 
+    <!-- Tailwind Base -->
     <style>
-      /* Tailwind base */
-
       *,
       ::after,
       ::before,
@@ -217,6 +218,7 @@
       }
     </style>
 
+    <!-- Custom -->
     <style>
       :root {
         --default-font-family: "Satoshi";
@@ -803,6 +805,23 @@
         color: var(--orange);
       }
 
+      summary {
+        list-style: none;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        position: relative;
+
+        &::marker,
+        &::-webkit-details-marker {
+          display: none;
+        }
+
+        &:hover {
+          color: var(--orange);
+        }
+      }
+
       svg {
         width: 20px;
         height: 20px;
@@ -888,20 +907,7 @@
             }
 
             > details > summary {
-              list-style: none;
-              display: flex;
-              align-items: center;
-              cursor: pointer;
               position: relative;
-
-              &::marker,
-              &::-webkit-details-marker {
-                display: none;
-              }
-
-              &:hover {
-                color: var(--orange);
-              }
 
               details[open] > & {
                 &::after {
@@ -1024,49 +1030,56 @@
         }
 
         > #dashboards {
-          display: flex;
-          flex-direction: column;
           z-index: 50;
           margin: -0.5px calc(-1.5rem - 1px);
+          display: flex;
 
-          > table {
-            flex: 1;
-            table-layout: auto;
-            border-collapse: separate;
-            border-spacing: 0px 1px;
-            border: 1px;
-            border-top: 0;
-            padding: 0.25rem 0;
-            margin: -0.5px;
-            /* font-size: var(--font-size-xs);
-            line-height: var(--line-height-xs); */
+          > details {
+            /* border: 1px; */
 
-            caption {
-              border-bottom-style: dashed !important;
-              border-width: 1px;
-              padding: 0.375rem 0.625rem;
+            > summary {
+              margin: -0.5px;
+              display: block;
+              padding: 0.5rem 1.5rem;
               text-align: left;
-            }
-
-            tr {
               border: 1px;
 
-              &:hover,
-              &:hover * {
-                color: var(--orange) !important;
+              details[open] > & {
+                border-bottom-style: dashed !important;
+                border-bottom-width: 1px;
               }
+            }
 
-              td {
-                padding: 0.125rem 0.625rem;
-                text-align: right;
+            > table {
+              border: 1px;
+              border-top-width: 0px;
+              margin: -0.5px;
+              width: calc(100% + 1px);
+              border-collapse: separate;
 
-                &:first-child {
-                  text-align: left;
-                  color: var(--off-color);
+              table-layout: auto;
+              padding: 0.375rem 1.5rem;
+
+              tr {
+                /* border: 1px; */
+
+                &:hover,
+                &:hover * {
+                  color: var(--orange) !important;
                 }
 
-                > i {
-                  color: var(--off-color);
+                td {
+                  padding: 0.125rem 0;
+                  text-align: right;
+
+                  &:first-child {
+                    text-align: left;
+                    color: var(--off-color);
+                  }
+
+                  > i {
+                    color: var(--off-color);
+                  }
                 }
               }
             }
@@ -1373,7 +1386,184 @@
       }
     </style>
 
+    <!-- Flex Masonry -->
+    <style>
+      .flexmasonry {
+        display: flex;
+        flex-flow: column wrap;
+        align-content: space-between;
+      }
+
+      .flexmasonry-item {
+        width: 100%;
+
+        .flexmasonry-cols-2 & {
+          width: 50%;
+
+          &:nth-child(2n + 1) {
+            order: 1;
+          }
+          &:nth-child(2n) {
+            order: 2;
+          }
+        }
+        .flexmasonry-cols-3 & {
+          width: 33.333%;
+
+          &:nth-child(3n + 1) {
+            order: 1;
+          }
+          &:nth-child(3n + 2) {
+            order: 2;
+          }
+          &:nth-child(3n) {
+            order: 3;
+          }
+        }
+        .flexmasonry-cols-4 & {
+          width: 25%;
+
+          &:nth-child(4n + 1) {
+            order: 1;
+          }
+          &:nth-child(4n + 2) {
+            order: 2;
+          }
+          &:nth-child(4n + 3) {
+            order: 3;
+          }
+          &:nth-child(4n) {
+            order: 4;
+          }
+        }
+        .flexmasonry-cols-5 & {
+          width: 20%;
+
+          &:nth-child(5n + 1) {
+            order: 1;
+          }
+          &:nth-child(5n + 2) {
+            order: 2;
+          }
+          &:nth-child(5n + 3) {
+            order: 3;
+          }
+          &:nth-child(5n + 4) {
+            order: 4;
+          }
+          &:nth-child(5n) {
+            order: 5;
+          }
+        }
+        .flexmasonry-cols-6 & {
+          width: 16.666%;
+
+          &:nth-child(6n + 1) {
+            order: 1;
+          }
+          &:nth-child(6n + 2) {
+            order: 2;
+          }
+          &:nth-child(6n + 3) {
+            order: 3;
+          }
+          &:nth-child(6n + 4) {
+            order: 4;
+          }
+          &:nth-child(6n + 5) {
+            order: 5;
+          }
+          &:nth-child(6n) {
+            order: 6;
+          }
+        }
+        .flexmasonry-cols-7 & {
+          width: 14.285%;
+
+          &:nth-child(7n + 1) {
+            order: 1;
+          }
+          &:nth-child(7n + 2) {
+            order: 2;
+          }
+          &:nth-child(7n + 3) {
+            order: 3;
+          }
+          &:nth-child(7n + 4) {
+            order: 4;
+          }
+          &:nth-child(7n + 5) {
+            order: 5;
+          }
+          &:nth-child(7n + 6) {
+            order: 6;
+          }
+          &:nth-child(7n) {
+            order: 7;
+          }
+        }
+        .flexmasonry-cols-8 & {
+          width: 12.5%;
+
+          &:nth-child(8n + 1) {
+            order: 1;
+          }
+          &:nth-child(8n + 2) {
+            order: 2;
+          }
+          &:nth-child(8n + 3) {
+            order: 3;
+          }
+          &:nth-child(8n + 4) {
+            order: 4;
+          }
+          &:nth-child(8n + 5) {
+            order: 5;
+          }
+          &:nth-child(8n + 6) {
+            order: 6;
+          }
+          &:nth-child(8n + 7) {
+            order: 7;
+          }
+          &:nth-child(8n) {
+            order: 8;
+          }
+        }
+      }
+
+      .flexmasonry-break {
+        content: "";
+        flex-basis: 100%;
+        width: 0 !important;
+        margin: 0;
+      }
+      .flexmasonry-break-1 {
+        order: 1;
+      }
+      .flexmasonry-break-2 {
+        order: 2;
+      }
+      .flexmasonry-break-3 {
+        order: 3;
+      }
+      .flexmasonry-break-4 {
+        order: 4;
+      }
+      .flexmasonry-break-5 {
+        order: 5;
+      }
+      .flexmasonry-break-6 {
+        order: 6;
+      }
+      .flexmasonry-break-7 {
+        order: 7;
+      }
+    </style>
+
+    <!-- ------- -->
     <!-- Scripts -->
+    <!-- ------- -->
 
     <script>
       // @ts-check
