--- a/website/index.html
+++ b/website/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="manifest" href="/manifest.webmanifest" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <script type="module" crossorigin src="./script.js"></script>
+    <script type="module" crossorigin src="/scripts/main.js"></script>
 
     <!-- ------ -->
     <!-- Styles -->
@@ -393,6 +393,11 @@
         &:active {
           transform: var(--transform-scale-active);
         }
+      }
+
+      details {
+        /* content-visibility: auto;
+        contain-intrinsic-size: auto none; */
       }
 
       fieldset {
@@ -1028,231 +1033,6 @@
             max-width: 32rem;
           }
         }
-
-        > #dashboards {
-          z-index: 50;
-          margin: -0.5px calc(-1.5rem - 1px);
-          display: flex;
-
-          > details {
-            /* border: 1px; */
-
-            > summary {
-              margin: -0.5px;
-              display: block;
-              padding: 0.5rem 1.5rem;
-              text-align: left;
-              border: 1px;
-
-              details[open] > & {
-                border-bottom-style: dashed !important;
-                border-bottom-width: 1px;
-              }
-            }
-
-            > table {
-              border: 1px;
-              border-top-width: 0px;
-              margin: -0.5px;
-              width: calc(100% + 1px);
-              border-collapse: separate;
-
-              table-layout: auto;
-              padding: 0.375rem 1.5rem;
-
-              tr {
-                /* border: 1px; */
-
-                &:hover,
-                &:hover * {
-                  color: var(--orange) !important;
-                }
-
-                td {
-                  padding: 0.125rem 0;
-                  text-align: right;
-
-                  &:first-child {
-                    text-align: left;
-                    color: var(--off-color);
-                  }
-
-                  > i {
-                    color: var(--off-color);
-                  }
-                }
-              }
-            }
-          }
-        }
-
-        > #charts {
-          display: flex;
-          flex-direction: column;
-          flex: 1;
-          min-height: 0;
-
-          > #legend {
-            display: flex;
-            align-items: center;
-            gap: 1.5rem;
-            margin: -1rem -1.5rem;
-            padding: 1rem 1.5rem;
-            overflow-x: auto;
-            min-width: 0;
-
-            > div {
-              flex: 0;
-              display: flex;
-              align-items: center;
-
-              > label {
-                margin: -0.375rem 0;
-                color: var(--color);
-
-                &:has(input:not(:checked)) {
-                  color: var(--off-color);
-
-                  > span.main > span.name {
-                    text-decoration-style: wavy;
-                    text-decoration-thickness: 1.5px;
-                    text-decoration-color: var(--color);
-                    text-decoration-line: line-through;
-                  }
-
-                  &:hover {
-                    * {
-                      color: var(--off-color) !important;
-                    }
-
-                    > span.main > span.name {
-                      text-decoration-color: var(--orange) !important;
-                    }
-                  }
-                }
-              }
-
-              > a {
-                padding: 0.375rem;
-                margin: -0.375rem;
-
-                > svg {
-                  /* padding: 0.375rem; */
-                  margin: 0rem;
-                  width: 1rem;
-                  height: 1rem;
-                }
-              }
-            }
-          }
-
-          > #chart-list {
-            margin-top: 1rem;
-            position: relative;
-            margin-left: -1.5rem /* -24px */;
-            margin-right: -2rem /* -32px */;
-            display: flex;
-            flex-direction: column;
-            flex: 1;
-            min-height: 0;
-            z-index: 20;
-
-            > .chart-wrapper {
-              height: 100%;
-              position: relative;
-              min-height: 0px;
-              width: 100%;
-              cursor: crosshair;
-
-              &:has(+ .chart-wrapper:not([hidden])) {
-                height: calc(100% - 62px);
-              }
-
-              > fieldset {
-                pointer-events: none;
-                position: absolute;
-                left: 0px;
-                top: 0px;
-                z-index: 10;
-                display: flex;
-                align-items: center;
-                padding-left: 1.5rem /* 24px */;
-                padding-right: 1.5rem /* 24px */;
-                font-size: var(--font-size-xs);
-                line-height: var(--line-height-xs);
-
-                > * + * {
-                  margin-left: 0.5rem; /* 8px */
-                }
-
-                > * + span {
-                  color: var(--off-color);
-                }
-              }
-
-              > .chart-div {
-                width: 100%;
-                height: 100%;
-              }
-            }
-          }
-
-          > #timescale {
-            margin-top: 1rem;
-            display: flex;
-            overflow: hidden;
-            z-index: 50;
-
-            @media (max-width: 767px) {
-              margin-bottom: -1.5rem;
-              border-top: 1px;
-              margin-left: -1.5rem;
-              margin-right: -1.5rem;
-            }
-
-            @media (min-width: 768px) {
-              border-radius: 9999px;
-              border: 1px;
-            }
-
-            > button {
-              flex: 0;
-            }
-
-            > div {
-              min-width: 0;
-              flex: 1;
-              display: flex;
-              position: relative;
-
-              > #timescale-date-buttons,
-              > #timescale-height-buttons {
-                display: flex;
-                overflow-x: auto;
-
-                > button {
-                  color: var(--off-color);
-                  flex-shrink: 0;
-                  flex-grow: 1;
-                  padding: 0.5rem;
-                  white-space: nowrap;
-                  min-width: 5rem;
-                }
-              }
-            }
-
-            > *:not(:first-child):not(:last-child) {
-              border-left: 1px;
-              border-right: 1px;
-            }
-          }
-        }
-
-        > object {
-          margin: -1.5rem;
-          flex: 1;
-          z-index: 100;
-        }
       }
 
       #share-div {
@@ -1600,7 +1380,7 @@
       }
 
       if ("serviceWorker" in navigator) {
-        navigator.serviceWorker.register("/service-worker.js");
+        navigator.serviceWorker.register("/scripts/service-worker.js");
       }
     </script>
 
@@ -2444,7 +2224,7 @@
             </button>
           </div>
         </div>
-        <div id="dashboards" hidden></div>
+        <div id="dashboard" hidden></div>
       </section>
     </aside>
     <div id="share-div" hidden>
