--- a/website/index.html
+++ b/website/index.html
@@ -238,8 +238,8 @@
         /* current: oklch(50% 0.01 44) */
         --dark-gray: #68625f;
         /* before: #30302b */
-        /* current: oklch(30% 0.01 44) */
-        --darker-gray: #322c2a;
+        /* current: oklch(25% 0.01 44) */
+        --darker-gray: #26201e;
         /* before: #10100e */
         /* current: oklch(17.5% 0.005 44) */
         --black: #12100f;
@@ -890,7 +890,7 @@
               position: absolute;
               top: -12px;
               left: -1px;
-              width: 9px;
+              width: 10px;
               height: 1.75rem;
               border-color: var(--border-color);
               border-width: 0 0 1px 1px;
@@ -920,7 +920,7 @@
                   display: block;
                   position: absolute;
                   bottom: 0;
-                  height: 11.5px;
+                  height: 12.5px;
                   border-color: var(--border-color);
                   border-width: 0 0 0px 1px;
                 }
@@ -928,10 +928,10 @@
 
               > span.marker {
                 color: var(--border-color);
-                font-size: var(--font-size-xs);
-                line-height: var(--line-height-xs);
+                font-size: var(--font-size-2xs);
+                line-height: var(--line-height-2xs);
                 z-index: 10;
-                margin-left: -5px;
+                margin-left: -4px;
                 margin-bottom: 0.0625rem;
               }
 
