website: up signals + added compare folder to all groups

--- a/website/index.html
+++ b/website/index.html
@@ -971,7 +971,7 @@
                 }
 
                 details:not([open]) > summary:hover > & {
-                  background-color: var(--orange);
+                  background-color: var(--orange) !important;
                 }
               }
 
