--- a/website/index.html
+++ b/website/index.html
@@ -37,11 +37,10 @@
         line-height: 1.5;
         -webkit-text-size-adjust: 100%;
         tab-size: 4;
-        font-family: var(--default-font-family), ui-sans-serif, system-ui,
-          sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+        font-family: "Satoshi", ui-sans-serif, system-ui, sans-serif,
+          "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
           "Noto Color Emoji";
-        font-feature-settings: var(--default-font-feature-settings, normal);
-        font-variation-settings: var(--default-font-variation-settings, normal);
+        font-feature-settings: "ss03";
         -webkit-tap-highlight-color: transparent;
       }
 
@@ -137,12 +136,6 @@
         background: transparent;
       }
 
-      input:where(:not([type="button"], [type="reset"], [type="submit"])),
-      select,
-      textarea {
-        border: 1px solid;
-      }
-
       button,
       input:where([type="button"], [type="reset"], [type="submit"]),
       ::file-selector-button {
@@ -221,10 +214,6 @@
       :root {
         color-scheme: light dark;
 
-        --default-font-family: "Satoshi";
-        --default-font-feature-settings: "normal";
-        --default-font-variation-settings: "normal";
-
         /* before: #ffffe3 */
         /* current: oklch(99% 0.01 44) */
         --white: #fffaf6;
@@ -243,9 +232,27 @@
         /* before: #10100e */
         /* current: oklch(17.5% 0.005 44) */
         --black: #12100f;
+        --red: oklch(0.607 0.241 26.328);
         /* before: #f26610 */
         /* current: oklch(67.64% 0.191 44.41) */
-        --orange: #f26610;
+        --orange: oklch(67.64% 0.191 44.41); /*oklch(0.6755 0.2175 44.36); */
+        --amber: oklch(0.7175 0.1835 64.199);
+        --yellow: oklch(0.738 0.173 80.9405);
+        --avocado: oklch(0.72 0.19 110);
+        --lime: oklch(0.708 0.2165 131.267);
+        --green: oklch(0.675 0.2065 149.3965);
+        --emerald: oklch(0.646 0.1575 162.8525);
+        --teal: oklch(0.652 0.129 183.6035);
+        --cyan: oklch(0.662 0.1345 218.472);
+        --sky: oklch(0.6365 0.1635 239.6445);
+        --blue: oklch(0.5845 0.2295 261.348);
+        --indigo: oklch(0.548 0.2475 277.0415);
+        --violet: oklch(0.5735 0.2655 292.863);
+        --purple: oklch(0.5925 0.2765 303.1105);
+        --fuchsia: oklch(0.629 0.294 322.523);
+        --pink: oklch(0.624 0.245 357.444);
+        --rose: oklch(0.6155 0.2495 17.012);
+        --dollar: var(--green);
 
         --font-size-2xs: 0.625rem;
         --line-height-2xs: 1rem;
@@ -273,12 +280,19 @@
 
         --transform-scale-active: scaleY(0.9);
 
-        --default-main-width: 400px;
+        --default-main-width: 25rem;
 
         --background-color: light-dark(var(--white), var(--black));
         --color: light-dark(var(--black), var(--white));
         --off-color: light-dark(var(--light-gray), var(--dark-gray));
         --border-color: light-dark(var(--lighter-gray), var(--darker-gray));
+
+        --emoji-filter: grayscale(1) contrast(5) invert(1);
+        @media (prefers-color-scheme: dark) {
+          --emoji-filter: grayscale(1) contrast(5);
+        }
+
+        --bottom-area: 69vh;
       }
 
       [data-resize] {
@@ -377,7 +391,13 @@
         display: flex;
         width: 100%;
         flex: 1;
-        margin-bottom: 4rem;
+        margin-bottom: calc(var(--main-padding) + 1.5rem);
+
+        @media (max-width: 767px) {
+          html[data-display="standalone"] & {
+            margin-bottom: calc(var(--main-padding) + 2rem);
+          }
+        }
 
         @media (min-width: 768px) {
           border-left: 1px;
@@ -386,23 +406,7 @@
         }
 
         header {
-          flex-shrink: 0;
-          display: flex;
-
-          white-space: nowrap;
-          overflow-x: auto;
-          padding-bottom: 1rem;
-          margin-bottom: -1rem;
-          padding-left: var(--main-padding);
-          margin-left: var(--negative-main-padding);
-          padding-right: var(--main-padding);
-          margin-right: var(--negative-main-padding);
-
-          & > * {
-            flex: 1;
-          }
-
-          & > div > small {
+          small {
             font-weight: var(--font-weight-base);
             font-size: var(--font-size-base);
             line-height: var(--line-height-base);
@@ -596,10 +600,16 @@
           left: 0;
           display: flex;
           margin: var(--main-padding);
-          margin-bottom: calc(var(--main-padding) + 0.5rem);
+          margin-bottom: var(--main-padding);
           z-index: 20;
           pointer-events: none;
           justify-content: center;
+
+          @media (max-width: 767px) {
+            html[data-display="standalone"] & {
+              margin-bottom: calc(var(--main-padding) + 0.5rem);
+            }
+          }
 
           > fieldset {
             background-color: var(--border-color);
@@ -639,22 +649,22 @@
         background-color: white;
       }
 
-      nav,
-      search,
       section {
+        flex: 1;
+        min-width: 0;
+      }
+
+      nav,
+      search {
         flex: 1;
         overflow-x: hidden;
         overflow-y: auto;
         padding: var(--main-padding);
         height: 100%;
-
-        &:not(#selected-frame) {
-          padding-bottom: 69vh;
-        }
-
-        > * + * {
-          margin-top: 2rem;
-        }
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        padding-bottom: var(--bottom-area);
       }
 
       sup {
@@ -727,6 +737,7 @@
         user-select: none;
         -webkit-user-select: none;
         text-transform: capitalize;
+        margin-top: -0.375rem;
 
         button::after {
           color: var(--off-color);
@@ -1459,7 +1470,7 @@
           <small style="display: block">
             <strong>Bitcoin</strong> is
             <b style="color: var(--color)">hope</b>
-            <span style="filter: grayscale(1) contrast(5)">🕊️</span>
+            <span style="filter: var(--emoji-filter)">🕊️</span>
           </small>
         </header>
       </nav>
@@ -1517,19 +1528,19 @@
       </footer>
     </main>
     <aside id="aside">
-      <div class="shadow-left"></div>
-      <div class="shadow-right"></div>
-
       <section id="selected-frame">
-        <header id="selected-header" hidden>
-          <div>
-            <h1 style="display: flex; flex-direction: column">
-              <span id="selected-title" style="display: block"></span>
-              <small id="selected-description"></small>
-            </h1>
-          </div>
-        </header>
         <div id="charts" hidden>
+          <div class="shadow-left"></div>
+          <div class="shadow-right"></div>
+          <!-- TODO: Use utils.dom.createHeader; instead -->
+          <header id="selected-header" hidden>
+            <div>
+              <h1 style="display: flex; flex-direction: column">
+                <span id="selected-title" style="display: block"></span>
+                <small id="selected-description"></small>
+              </h1>
+            </div>
+          </header>
           <fieldset id="legend"></fieldset>
           <div id="charts-chart-list" class="chart-list">
             <div class="shadow-top"></div>
