--- a/website/index.html
+++ b/website/index.html
@@ -954,9 +954,9 @@
         flex-direction: column;
         flex: 1;
         min-height: 0;
-        z-index: 20;
 
         > .chart-wrapper {
+          z-index: 20;
           position: relative;
           min-height: 0px;
           width: 100%;
@@ -1529,24 +1529,7 @@
     </main>
     <aside id="aside">
       <section id="selected-frame">
-        <div id="charts" hidden>
-          <div class="shadow-left"></div>
-          <div class="shadow-right"></div>
-          <!-- TODO: Use utils.dom.createHeader; instead -->
-          <header id="selected-header" hidden>
-            <div>
-              <h1 style="display: flex; flex-direction: column">
-                <span id="selected-title" style="display: block"></span>
-                <small id="selected-description"></small>
-              </h1>
-            </div>
-          </header>
-          <fieldset id="legend"></fieldset>
-          <div id="charts-chart-list" class="chart-list">
-            <div class="shadow-top"></div>
-            <div class="shadow-bottom"></div>
-          </div>
-        </div>
+        <div id="charts" hidden></div>
         <div id="simulation" hidden></div>
         <div id="live-price" hidden></div>
         <div id="moscow-time" hidden></div>
