--- a/website/index.html
+++ b/website/index.html
@@ -253,6 +253,10 @@
         --pink: oklch(0.624 0.245 357.444);
         --rose: oklch(0.6155 0.2495 17.012);
         --dollar: var(--green);
+        --background-color: light-dark(var(--white), var(--black));
+        --color: light-dark(var(--black), var(--white));
+        --off-color: light-dark(var(--light-gray), var(--dark-gray));
+        --border-color: light-dark(var(--lighter-gray), var(--darker-gray));
 
         --font-size-2xs: 0.625rem;
         --line-height-2xs: 1rem;
@@ -281,11 +285,6 @@
         --transform-scale-active: scaleY(0.9);
 
         --default-main-width: 25rem;
-
-        --background-color: light-dark(var(--white), var(--black));
-        --color: light-dark(var(--black), var(--white));
-        --off-color: light-dark(var(--light-gray), var(--dark-gray));
-        --border-color: light-dark(var(--lighter-gray), var(--darker-gray));
 
         --emoji-filter: grayscale(1) contrast(5) invert(1);
         @media (prefers-color-scheme: dark) {
@@ -388,14 +387,16 @@
       aside {
         min-width: 0px;
         position: relative;
-        display: flex;
+        height: 100%;
         width: 100%;
+        overflow-y: auto;
         flex: 1;
-        margin-bottom: calc(var(--main-padding) + 1.5rem);
 
         @media (max-width: 767px) {
+          padding-bottom: calc(var(--main-padding) + 1.5rem);
+
           html[data-display="standalone"] & {
-            margin-bottom: calc(var(--main-padding) + 2rem);
+            padding-bottom: calc(var(--main-padding) + 2rem);
           }
         }
 
@@ -601,7 +602,7 @@
           display: flex;
           margin: var(--main-padding);
           margin-bottom: var(--main-padding);
-          z-index: 20;
+          z-index: 100;
           pointer-events: none;
           justify-content: center;
 
@@ -649,9 +650,16 @@
         background-color: white;
       }
 
-      section {
-        flex: 1;
-        min-width: 0;
+      select {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        background: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M7 10l5 5 5-5z" fill="gray"/><path d="M0 0h24v24H0z" fill="none"/></svg>')
+          100% 50% no-repeat transparent;
+
+        &:focus-visible {
+          border: none;
+        }
       }
 
       nav,
@@ -811,10 +819,7 @@
         }
       }
 
-      #selected-frame {
-        flex-direction: column;
-        display: flex;
-
+      aside {
         > header {
           button {
             margin: -0.5rem 0;
@@ -975,8 +980,6 @@
             z-index: 10;
             display: flex;
             align-items: center;
-            padding-left: var(--main-padding);
-            padding-right: var(--main-padding);
             font-size: var(--font-size-xs);
             line-height: var(--line-height-xs);
             gap: 0.5rem;
@@ -986,7 +989,7 @@
               align-items: center;
               font-size: var(--font-size-xs);
               line-height: var(--line-height-xs);
-              gap: 1rem;
+              gap: 0.5rem;
 
               > legend,
               > div {
@@ -1010,8 +1013,8 @@
           }
 
           > .chart-div {
-            width: 100%;
             height: 100%;
+            margin-right: calc(var(--negative-main-padding) - 0.5rem);
           }
         }
 
@@ -1528,12 +1531,10 @@
       </footer>
     </main>
     <aside id="aside">
-      <section id="selected-frame">
-        <div id="charts" hidden></div>
-        <div id="simulation" hidden></div>
-        <div id="live-price" hidden></div>
-        <div id="moscow-time" hidden></div>
-      </section>
+      <div id="charts" hidden></div>
+      <div id="simulation" hidden></div>
+      <div id="live-price" hidden></div>
+      <div id="moscow-time" hidden></div>
     </aside>
     <div id="share-div" hidden>
       <div id="share-content-div">
